--- a/index.html
+++ b/index.html
@@ -13,28 +13,44 @@
     <div class="container cf">
       <ul class="gallery">
         <li>
-          <a href="#">
-            <img src="gambar/thumb1.jpg" alt="Kaori & Kousei" />
+          <a href="#gambar-1">
+            <img src="gambar/thumb1.jpg" alt="Kaori & Kousei" class="border" />
             <span>Kaori & Kousei</span>
           </a>
+          <div class="overlay" id="gambar-1">
+            <a href="#" class="close">x close</a>
+            <img src="../gambar/full1.jpg" alt="Kaori & Kousei" />
+          </div>
         </li>
         <li>
-          <a href="#">
-            <img src="gambar/thumb2.jpg" alt="Kaori & Kousei" />
+          <a href="#gambar-2">
+            <img src="gambar/thumb2.jpg" alt="Kaori & Kousei" class="border" />
             <span>Kaori & Kousei</span>
           </a>
+          <div class="overlay" id="gambar-2">
+            <a href="#" class="close">x close</a>
+            <img src="../gambar/full2.jpg" alt="Kaori & Kousei" />
+          </div>
         </li>
         <li>
-          <a href="#">
-            <img src="gambar/thumb3.jpg" alt="Tsubaki" />
+          <a href="#gambar-3">
+            <img src="gambar/thumb3.jpg" alt="Tsubaki" class="border" />
             <span>Tsubaki</span>
           </a>
+          <div class="overlay" id="gambar-3">
+            <a href="#" class="close">x close</a>
+            <img src="../gambar/full3.jpg" alt="Tsubaki" />
+          </div>
         </li>
         <li>
-          <a href="#">
-            <img src="gambar/thumb4.jpg" alt="Kousei" />
+          <a href="#gambar-4">
+            <img src="gambar/thumb4.jpg" alt="Kousei" class="border" />
             <span>Kousei</span>
           </a>
+          <div class="overlay" id="gambar-4">
+            <a href="#" class="close">x close</a>
+            <img src="../gambar/full4.jpg" alt="Kousei" />
+          </div>
         </li>
       </ul>
     </div>
