--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </a>
           <div class="overlay" id="gambar-1">
             <a href="#" class="close">x close</a>
-            <img src="../gambar/full1.jpg" alt="Kaori & Kousei" />
+            <img src="gambar/full1.jpg" alt="Kaori & Kousei" />
           </div>
         </li>
         <li>
@@ -29,7 +29,7 @@
           </a>
           <div class="overlay" id="gambar-2">
             <a href="#" class="close">x close</a>
-            <img src="../gambar/full2.jpg" alt="Kaori & Kousei" />
+            <img src="gambar/full2.jpg" alt="Kaori & Kousei" />
           </div>
         </li>
         <li>
@@ -39,7 +39,7 @@
           </a>
           <div class="overlay" id="gambar-3">
             <a href="#" class="close">x close</a>
-            <img src="../gambar/full3.jpg" alt="Tsubaki" />
+            <img src="gambar/full3.jpg" alt="Tsubaki" />
           </div>
         </li>
         <li>
@@ -49,7 +49,7 @@
           </a>
           <div class="overlay" id="gambar-4">
             <a href="#" class="close">x close</a>
-            <img src="../gambar/full4.jpg" alt="Kousei" />
+            <img src="gambar/full4.jpg" alt="Kousei" />
           </div>
         </li>
       </ul>
