--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span>Kaori & Kousei</span>
           </a>
           <div class="overlay" id="gambar-1">
-            <a href="#" class="close">x close</a>
+            <a href="#" class="close">x tutup</a>
             <img src="gambar/full1.jpg" alt="Kaori & Kousei" />
           </div>
         </li>
@@ -28,7 +28,7 @@
             <span>Kaori & Kousei</span>
           </a>
           <div class="overlay" id="gambar-2">
-            <a href="#" class="close">x close</a>
+            <a href="#" class="close">x tutup</a>
             <img src="gambar/full2.jpg" alt="Kaori & Kousei" />
           </div>
         </li>
@@ -38,7 +38,7 @@
             <span>Tsubaki</span>
           </a>
           <div class="overlay" id="gambar-3">
-            <a href="#" class="close">x close</a>
+            <a href="#" class="close">x tutup</a>
             <img src="gambar/full3.jpg" alt="Tsubaki" />
           </div>
         </li>
@@ -48,7 +48,7 @@
             <span>Kousei</span>
           </a>
           <div class="overlay" id="gambar-4">
-            <a href="#" class="close">x close</a>
+            <a href="#" class="close">x tutup</a>
             <img src="gambar/full4.jpg" alt="Kousei" />
           </div>
         </li>
