--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
           </a>
           <div class="overlay" id="gambar-1">
             <a href="#" class="close">x tutup</a>
+            <a href="#gambar-4" class="prev">prev</a>
             <img src="gambar/full1.jpg" alt="Kaori & Kousei" />
+            <a href="#gambar-2" class="next">next</a>
           </div>
         </li>
         <li>
@@ -29,7 +31,9 @@
           </a>
           <div class="overlay" id="gambar-2">
             <a href="#" class="close">x tutup</a>
+            <a href="#gambar-1" class="prev">prev</a>
             <img src="gambar/full2.jpg" alt="Kaori & Kousei" />
+            <a href="#gambar-3" class="next">next</a>
           </div>
         </li>
         <li>
@@ -39,7 +43,9 @@
           </a>
           <div class="overlay" id="gambar-3">
             <a href="#" class="close">x tutup</a>
+            <a href="#gambar-2" class="prev">prev</a>
             <img src="gambar/full3.jpg" alt="Tsubaki" />
+            <a href="#gambar-4" class="next">next</a>
           </div>
         </li>
         <li>
@@ -49,7 +55,9 @@
           </a>
           <div class="overlay" id="gambar-4">
             <a href="#" class="close">x tutup</a>
+            <a href="#gambar-3" class="prev">prev</a>
             <img src="gambar/full4.jpg" alt="Kousei" />
+            <a href="#gambar-1" class="next">next</a>
           </div>
         </li>
       </ul>
