--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </a>
           <div class="overlay" id="gambar-1">
             <a href="#" class="close">x tutup</a>
-            <a href="#gambar-4" class="prev">prev</a>
+            <a href="#gambar-8" class="prev">prev</a>
             <img src="gambar/full1.jpg" alt="Kaori & Kousei" />
             <a href="#gambar-2" class="next">next</a>
           </div>
@@ -57,6 +57,54 @@
             <a href="#" class="close">x tutup</a>
             <a href="#gambar-3" class="prev">prev</a>
             <img src="gambar/full4.jpg" alt="Kousei" />
+            <a href="#gambar-5" class="next">next</a>
+          </div>
+        </li>
+        <li>
+          <a href="#gambar-5">
+            <img src="gambar/thumb5.png" alt="Kaori" class="border" />
+            <span>Kaori</span>
+          </a>
+          <div class="overlay" id="gambar-5">
+            <a href="#" class="close">x tutup</a>
+            <a href="#gambar-4" class="prev">prev</a>
+            <img src="gambar/full5.png" alt="Kaori" />
+            <a href="#gambar-6" class="next">next</a>
+          </div>
+        </li>
+        <li>
+          <a href="#gambar-6">
+            <img src="gambar/thumb6.jpg" alt="Kaori & Kousei" class="border" />
+            <span>Kaori & Kousei</span>
+          </a>
+          <div class="overlay" id="gambar-6">
+            <a href="#" class="close">x tutup</a>
+            <a href="#gambar-5" class="prev">prev</a>
+            <img src="gambar/full6.jpg" alt="Kaori & Kousei" />
+            <a href="#gambar-7" class="next">next</a>
+          </div>
+        </li>
+        <li>
+          <a href="#gambar-7">
+            <img src="gambar/thumb7.jpg" alt="Kousei" class="border" />
+            <span>Kousei</span>
+          </a>
+          <div class="overlay" id="gambar-7">
+            <a href="#" class="close">x tutup</a>
+            <a href="#gambar-6" class="prev">prev</a>
+            <img src="gambar/full7.jpg" alt="Kousei" />
+            <a href="#gambar-8" class="next">next</a>
+          </div>
+        </li>
+        <li>
+          <a href="#gambar-8">
+            <img src="gambar/thumb8.jpg" alt="Kaori & Kousei" class="border" />
+            <span>Kaori & Kousei</span>
+          </a>
+          <div class="overlay" id="gambar-8">
+            <a href="#" class="close">x tutup</a>
+            <a href="#gambar-7" class="prev">prev</a>
+            <img src="gambar/full8.jpg" alt="Kaori & Kousei" />
             <a href="#gambar-1" class="next">next</a>
           </div>
         </li>
