--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>四月は君の嘘</h1>
-    <div class="container cf">
+    <div class="container cf" id="container">
       <ul class="gallery">
         <li>
           <a href="#gambar-1">
@@ -18,7 +18,7 @@
             <span>Kaori & Kousei</span>
           </a>
           <div class="overlay" id="gambar-1">
-            <a href="#" class="close">x tutup</a>
+            <a href="#container" class="close">x tutup</a>
             <a href="#gambar-8" class="prev">prev</a>
             <img src="gambar/full1.jpg" alt="Kaori & Kousei" />
             <a href="#gambar-2" class="next">next</a>
@@ -30,7 +30,7 @@
             <span>Kaori & Kousei</span>
           </a>
           <div class="overlay" id="gambar-2">
-            <a href="#" class="close">x tutup</a>
+            <a href="#container" class="close">x tutup</a>
             <a href="#gambar-1" class="prev">prev</a>
             <img src="gambar/full2.jpg" alt="Kaori & Kousei" />
             <a href="#gambar-3" class="next">next</a>
@@ -42,7 +42,7 @@
             <span>Tsubaki</span>
           </a>
           <div class="overlay" id="gambar-3">
-            <a href="#" class="close">x tutup</a>
+            <a href="#container" class="close">x tutup</a>
             <a href="#gambar-2" class="prev">prev</a>
             <img src="gambar/full3.jpg" alt="Tsubaki" />
             <a href="#gambar-4" class="next">next</a>
@@ -54,7 +54,7 @@
             <span>Kousei</span>
           </a>
           <div class="overlay" id="gambar-4">
-            <a href="#" class="close">x tutup</a>
+            <a href="#container" class="close">x tutup</a>
             <a href="#gambar-3" class="prev">prev</a>
             <img src="gambar/full4.jpg" alt="Kousei" />
             <a href="#gambar-5" class="next">next</a>
@@ -66,7 +66,7 @@
             <span>Kaori</span>
           </a>
           <div class="overlay" id="gambar-5">
-            <a href="#" class="close">x tutup</a>
+            <a href="#container" class="close">x tutup</a>
             <a href="#gambar-4" class="prev">prev</a>
             <img src="gambar/full5.png" alt="Kaori" />
             <a href="#gambar-6" class="next">next</a>
@@ -78,7 +78,7 @@
             <span>Kaori & Kousei</span>
           </a>
           <div class="overlay" id="gambar-6">
-            <a href="#" class="close">x tutup</a>
+            <a href="#container" class="close">x tutup</a>
             <a href="#gambar-5" class="prev">prev</a>
             <img src="gambar/full6.jpg" alt="Kaori & Kousei" />
             <a href="#gambar-7" class="next">next</a>
@@ -90,7 +90,7 @@
             <span>Kousei</span>
           </a>
           <div class="overlay" id="gambar-7">
-            <a href="#" class="close">x tutup</a>
+            <a href="#container" class="close">x tutup</a>
             <a href="#gambar-6" class="prev">prev</a>
             <img src="gambar/full7.jpg" alt="Kousei" />
             <a href="#gambar-8" class="next">next</a>
@@ -102,7 +102,7 @@
             <span>Kaori & Kousei</span>
           </a>
           <div class="overlay" id="gambar-8">
-            <a href="#" class="close">x tutup</a>
+            <a href="#container" class="close">x tutup</a>
             <a href="#gambar-7" class="prev">prev</a>
             <img src="gambar/full8.jpg" alt="Kaori & Kousei" />
             <a href="#gambar-1" class="next">next</a>
