--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
   </head>
   <body>
     <h1>四月は君の嘘</h1>
-    <div class="container cf" id="container">
+    <div class="container cf">
       <ul class="gallery">
         <li>
           <a href="#gambar-1">
-            <img src="gambar/thumb1.jpg" alt="Kaori & Kousei" class="border" />
+            <img
+              src="gambar/thumb1.jpg"
+              alt="Kaori & Kousei"
+              class="border"
+              id="thumb1"
+            />
             <span>Kaori & Kousei</span>
           </a>
           <div class="overlay" id="gambar-1">
-            <a href="#container" class="close">x tutup</a>
+            <a href="#thumb1" class="close">x tutup</a>
             <a href="#gambar-8" class="prev">prev</a>
             <img src="gambar/full1.jpg" alt="Kaori & Kousei" />
             <a href="#gambar-2" class="next">next</a>
@@ -26,11 +31,16 @@
         </li>
         <li>
           <a href="#gambar-2">
-            <img src="gambar/thumb2.jpg" alt="Kaori & Kousei" class="border" />
+            <img
+              src="gambar/thumb2.jpg"
+              alt="Kaori & Kousei"
+              class="border"
+              id="thumb2"
+            />
             <span>Kaori & Kousei</span>
           </a>
           <div class="overlay" id="gambar-2">
-            <a href="#container" class="close">x tutup</a>
+            <a href="#thumb2" class="close">x tutup</a>
             <a href="#gambar-1" class="prev">prev</a>
             <img src="gambar/full2.jpg" alt="Kaori & Kousei" />
             <a href="#gambar-3" class="next">next</a>
@@ -38,11 +48,16 @@
         </li>
         <li>
           <a href="#gambar-3">
-            <img src="gambar/thumb3.jpg" alt="Tsubaki" class="border" />
+            <img
+              src="gambar/thumb3.jpg"
+              alt="Tsubaki"
+              class="border"
+              id="thumb3"
+            />
             <span>Tsubaki</span>
           </a>
           <div class="overlay" id="gambar-3">
-            <a href="#container" class="close">x tutup</a>
+            <a href="#thumb3" class="close">x tutup</a>
             <a href="#gambar-2" class="prev">prev</a>
             <img src="gambar/full3.jpg" alt="Tsubaki" />
             <a href="#gambar-4" class="next">next</a>
@@ -50,11 +65,16 @@
         </li>
         <li>
           <a href="#gambar-4">
-            <img src="gambar/thumb4.jpg" alt="Kousei" class="border" />
+            <img
+              src="gambar/thumb4.jpg"
+              alt="Kousei"
+              class="border"
+              id="thumb4"
+            />
             <span>Kousei</span>
           </a>
           <div class="overlay" id="gambar-4">
-            <a href="#container" class="close">x tutup</a>
+            <a href="#thumb4" class="close">x tutup</a>
             <a href="#gambar-3" class="prev">prev</a>
             <img src="gambar/full4.jpg" alt="Kousei" />
             <a href="#gambar-5" class="next">next</a>
@@ -62,11 +82,16 @@
         </li>
         <li>
           <a href="#gambar-5">
-            <img src="gambar/thumb5.png" alt="Kaori" class="border" />
+            <img
+              src="gambar/thumb5.png"
+              alt="Kaori"
+              class="border"
+              id="thumb5"
+            />
             <span>Kaori</span>
           </a>
           <div class="overlay" id="gambar-5">
-            <a href="#container" class="close">x tutup</a>
+            <a href="#thumb5" class="close">x tutup</a>
             <a href="#gambar-4" class="prev">prev</a>
             <img src="gambar/full5.png" alt="Kaori" />
             <a href="#gambar-6" class="next">next</a>
@@ -74,11 +99,16 @@
         </li>
         <li>
           <a href="#gambar-6">
-            <img src="gambar/thumb6.jpg" alt="Kaori & Kousei" class="border" />
+            <img
+              src="gambar/thumb6.jpg"
+              alt="Kaori & Kousei"
+              class="border"
+              id="thumb6"
+            />
             <span>Kaori & Kousei</span>
           </a>
           <div class="overlay" id="gambar-6">
-            <a href="#container" class="close">x tutup</a>
+            <a href="#thumb6" class="close">x tutup</a>
             <a href="#gambar-5" class="prev">prev</a>
             <img src="gambar/full6.jpg" alt="Kaori & Kousei" />
             <a href="#gambar-7" class="next">next</a>
@@ -86,11 +116,16 @@
         </li>
         <li>
           <a href="#gambar-7">
-            <img src="gambar/thumb7.jpg" alt="Kousei" class="border" />
+            <img
+              src="gambar/thumb7.jpg"
+              alt="Kousei"
+              class="border"
+              id="thumb7"
+            />
             <span>Kousei</span>
           </a>
           <div class="overlay" id="gambar-7">
-            <a href="#container" class="close">x tutup</a>
+            <a href="#thumb7" class="close">x tutup</a>
             <a href="#gambar-6" class="prev">prev</a>
             <img src="gambar/full7.jpg" alt="Kousei" />
             <a href="#gambar-8" class="next">next</a>
@@ -98,11 +133,16 @@
         </li>
         <li>
           <a href="#gambar-8">
-            <img src="gambar/thumb8.jpg" alt="Kaori & Kousei" class="border" />
+            <img
+              src="gambar/thumb8.jpg"
+              alt="Kaori & Kousei"
+              class="border"
+              id="thumb8"
+            />
             <span>Kaori & Kousei</span>
           </a>
           <div class="overlay" id="gambar-8">
-            <a href="#container" class="close">x tutup</a>
+            <a href="#thumb8" class="close">x tutup</a>
             <a href="#gambar-7" class="prev">prev</a>
             <img src="gambar/full8.jpg" alt="Kaori & Kousei" />
             <a href="#gambar-1" class="next">next</a>
