--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </a>
           <div class="overlay" id="gambar-1">
             <a href="#thumb1" class="close">x tutup</a>
-            <a href="#gambar-8" class="prev">prev</a>
+            <a href="#gambar-16" class="prev">prev</a>
             <img src="gambar/full1.jpg" alt="Kaori & Kousei" />
             <a href="#gambar-2" class="next">next</a>
           </div>
@@ -118,33 +118,169 @@
           <a href="#gambar-7">
             <img
               src="gambar/thumb7.jpg"
-              alt="Kousei"
+              alt="Kaori & Kousei"
               class="border"
               id="thumb7"
             />
-            <span>Kousei</span>
+            <span>Kaori & Kousei</span>
           </a>
           <div class="overlay" id="gambar-7">
             <a href="#thumb7" class="close">x tutup</a>
             <a href="#gambar-6" class="prev">prev</a>
-            <img src="gambar/full7.jpg" alt="Kousei" />
+            <img src="gambar/full7.jpg" alt="Kaori & Kousei" />
             <a href="#gambar-8" class="next">next</a>
           </div>
         </li>
         <li>
           <a href="#gambar-8">
             <img
-              src="gambar/thumb8.jpg"
-              alt="Kaori & Kousei"
+              src="gambar/thumb8.png"
+              alt="Watari"
               class="border"
               id="thumb8"
             />
-            <span>Kaori & Kousei</span>
+            <span>Watari</span>
           </a>
           <div class="overlay" id="gambar-8">
             <a href="#thumb8" class="close">x tutup</a>
             <a href="#gambar-7" class="prev">prev</a>
-            <img src="gambar/full8.jpg" alt="Kaori & Kousei" />
+            <img src="gambar/full8.png" alt="Watari" />
+            <a href="#gambar-9" class="next">next</a>
+          </div>
+        </li>
+        <li>
+          <a href="#gambar-9">
+            <img
+              src="gambar/thumb9.jpg"
+              alt="Hiroko Seto"
+              class="border"
+              id="thumb9"
+            />
+            <span>Hiroko Seto</span>
+          </a>
+          <div class="overlay" id="gambar-9">
+            <a href="#thumb9" class="close">x tutup</a>
+            <a href="#gambar-8" class="prev">prev</a>
+            <img src="gambar/full9.jpg" alt="Hiroko Seto" />
+            <a href="#gambar-10" class="next">next</a>
+          </div>
+        </li>
+        <li>
+          <a href="#gambar-10">
+            <img
+              src="gambar/thumb10.jpg"
+              alt="Saki"
+              class="border"
+              id="thumb10"
+            />
+            <span>Saki</span>
+          </a>
+          <div class="overlay" id="gambar-10">
+            <a href="#thumb10" class="close">x tutup</a>
+            <a href="#gambar-9" class="prev">prev</a>
+            <img src="gambar/full10.jpg" alt="Saki" />
+            <a href="#gambar-11" class="next">next</a>
+          </div>
+        </li>
+        <li>
+          <a href="#gambar-11">
+            <img
+              src="gambar/thumb11.jpg"
+              alt="Nao Kashiwagi"
+              class="border"
+              id="thumb11"
+            />
+            <span>Nao Kashiwagi</span>
+          </a>
+          <div class="overlay" id="gambar-11">
+            <a href="#thumb11" class="close">x tutup</a>
+            <a href="#gambar-10" class="prev">prev</a>
+            <img src="gambar/full11.jpg" alt="Nao Kashiwagi" />
+            <a href="#gambar-12" class="next">next</a>
+          </div>
+        </li>
+        <li>
+          <a href="#gambar-12">
+            <img
+              src="gambar/thumb12.jpg"
+              alt="Nagi Aiza"
+              class="border"
+              id="thumb12"
+            />
+            <span>Nagi Aiza</span>
+          </a>
+          <div class="overlay" id="gambar-12">
+            <a href="#thumb12" class="close">x tutup</a>
+            <a href="#gambar-11" class="prev">prev</a>
+            <img src="gambar/full12.jpg" alt="Nagi Aiza" />
+            <a href="#gambar-13" class="next">next</a>
+          </div>
+        </li>
+        <li>
+          <a href="#gambar-13">
+            <img
+              src="gambar/thumb13.jpg"
+              alt="Mike"
+              class="border"
+              id="thumb13"
+            />
+            <span>Mike</span>
+          </a>
+          <div class="overlay" id="gambar-13">
+            <a href="#thumb13" class="close">x tutup</a>
+            <a href="#gambar-12" class="prev">prev</a>
+            <img src="gambar/full13.jpg" alt="Mike" />
+            <a href="#gambar-14" class="next">next</a>
+          </div>
+        </li>
+        <li>
+          <a href="#gambar-14">
+            <img
+              src="gambar/thumb14.jpg"
+              alt="Takeshi Aiza"
+              class="border"
+              id="thumb14"
+            />
+            <span>Takeshi Aiza</span>
+          </a>
+          <div class="overlay" id="gambar-14">
+            <a href="#thumb14" class="close">x tutup</a>
+            <a href="#gambar-13" class="prev">prev</a>
+            <img src="gambar/full14.jpg" alt="Takeshi Aiza" />
+            <a href="#gambar-15" class="next">next</a>
+          </div>
+        </li>
+        <li>
+          <a href="#gambar-15">
+            <img
+              src="gambar/thumb15.jpg"
+              alt="Emi Igawa"
+              class="border"
+              id="thumb15"
+            />
+            <span>Emi Igawa</span>
+          </a>
+          <div class="overlay" id="gambar-15">
+            <a href="#thumb15" class="close">x tutup</a>
+            <a href="#gambar-14" class="prev">prev</a>
+            <img src="gambar/full15.jpg" alt="Emi Igawa" />
+            <a href="#gambar-16" class="next">next</a>
+          </div>
+        </li>
+        <li>
+          <a href="#gambar-16">
+            <img
+              src="gambar/thumb16.jpg"
+              alt="Saitou"
+              class="border"
+              id="thumb16"
+            />
+            <span>Saitou</span>
+          </a>
+          <div class="overlay" id="gambar-16">
+            <a href="#thumb16" class="close">x tutup</a>
+            <a href="#gambar-15" class="prev">prev</a>
+            <img src="gambar/full16.jpg" alt="Saitou" />
             <a href="#gambar-1" class="next">next</a>
           </div>
         </li>
