--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>四月は君の嘘</h1>
+    <h1>Shigatsu wa Kimi no Uso</h1>
     <div class="container cf">
       <ul class="gallery">
         <li>
